--- a/sr3_attempts.ipynb
+++ b/sr3_attempts.ipynb
@@ -978,13 +978,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "b = torch.flatten(blurred)\n",
-    "x_init = np.ones(m**2)\n",
-    "y0 = x_init.copy()\n",
+    "b = blurred\n",
+    "x_init = torch.ones(m**2)\n",
+    "y0 = x_init.clone()\n",
     "t = 1\n",
     "lam = 2e-5"
    ]
@@ -1006,21 +1006,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "ename": "RuntimeError",
-     "evalue": "Can't call numpy() on Tensor that requires grad. Use tensor.detach().numpy() instead.",
+     "evalue": "a view of a leaf Variable that requires grad is being used in an in-place operation.",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01moperators\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m grad\n\u001b[0;32m----> 2\u001b[0m \u001b[43mgrad\u001b[49m\u001b[43m(\u001b[49m\u001b[43my0\u001b[49m\u001b[43m,\u001b[49m\u001b[43mb\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Documents/Opt_Research/operators.py:121\u001b[0m, in \u001b[0;36mgrad\u001b[0;34m(x, b)\u001b[0m\n\u001b[1;32m    119\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39m~\u001b[39mx\u001b[39m.\u001b[39mrequires_grad:\n\u001b[1;32m    120\u001b[0m     x\u001b[39m.\u001b[39mrequires_grad_()\n\u001b[0;32m--> 121\u001b[0m w \u001b[39m=\u001b[39m gen_function(x,b)\n\u001b[1;32m    122\u001b[0m w\u001b[39m.\u001b[39mbackward()\n\u001b[1;32m    123\u001b[0m \u001b[39mreturn\u001b[39;00m x\u001b[39m.\u001b[39mgrad\n",
-      "File \u001b[0;32m~/Documents/Opt_Research/operators.py:109\u001b[0m, in \u001b[0;36mgen_function\u001b[0;34m(x, b)\u001b[0m\n\u001b[1;32m    108\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mgen_function\u001b[39m(x,b):\n\u001b[0;32m--> 109\u001b[0m     Ax \u001b[39m=\u001b[39m blur_operator(x)\n\u001b[1;32m    110\u001b[0m     b \u001b[39m=\u001b[39m (torch\u001b[39m.\u001b[39mfrom_numpy(b))\n\u001b[1;32m    111\u001b[0m     w \u001b[39m=\u001b[39m Ax \u001b[39m-\u001b[39m b\n",
-      "File \u001b[0;32m~/Documents/Opt_Research/operators.py:48\u001b[0m, in \u001b[0;36mblur_operator\u001b[0;34m(org, reshape, shape, sigma, mode)\u001b[0m\n\u001b[1;32m     46\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mblur_operator\u001b[39m(org, reshape\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m, shape\u001b[39m=\u001b[39m(\u001b[39m9\u001b[39m,\u001b[39m9\u001b[39m), sigma\u001b[39m=\u001b[39m\u001b[39m4\u001b[39m, mode\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mreflect\u001b[39m\u001b[39m\"\u001b[39m):\n\u001b[1;32m     47\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mtype\u001b[39m(org) \u001b[39m==\u001b[39m torch\u001b[39m.\u001b[39mTensor:\n\u001b[0;32m---> 48\u001b[0m         org \u001b[39m=\u001b[39m org\u001b[39m.\u001b[39;49mnumpy()\n\u001b[1;32m     49\u001b[0m     \u001b[39mif\u001b[39;00m reshape:\n\u001b[1;32m     50\u001b[0m         m \u001b[39m=\u001b[39m \u001b[39mint\u001b[39m(np\u001b[39m.\u001b[39msqrt(org\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m]))\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: Can't call numpy() on Tensor that requires grad. Use tensor.detach().numpy() instead."
+      "Cell \u001b[0;32mIn[7], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01moperators\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m grad\n\u001b[0;32m----> 2\u001b[0m \u001b[43mgrad\u001b[49m\u001b[43m(\u001b[49m\u001b[43my0\u001b[49m\u001b[43m,\u001b[49m\u001b[43mb\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Documents/Opt_Research/Summer_2023/operators.py:139\u001b[0m, in \u001b[0;36mgrad\u001b[0;34m(x, b)\u001b[0m\n\u001b[1;32m    137\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39m~\u001b[39mx\u001b[39m.\u001b[39mrequires_grad:\n\u001b[1;32m    138\u001b[0m     x\u001b[39m.\u001b[39mrequires_grad_()\n\u001b[0;32m--> 139\u001b[0m w \u001b[39m=\u001b[39m gen_function(x,b)\n\u001b[1;32m    140\u001b[0m w\u001b[39m.\u001b[39mbackward()\n\u001b[1;32m    141\u001b[0m \u001b[39mreturn\u001b[39;00m x\u001b[39m.\u001b[39mgrad\n",
+      "File \u001b[0;32m~/Documents/Opt_Research/Summer_2023/operators.py:128\u001b[0m, in \u001b[0;36mgen_function\u001b[0;34m(x, b)\u001b[0m\n\u001b[1;32m    127\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mgen_function\u001b[39m(x,b):\n\u001b[0;32m--> 128\u001b[0m     Ax \u001b[39m=\u001b[39m blur_operator_torch(x)\n\u001b[1;32m    129\u001b[0m     w \u001b[39m=\u001b[39m Ax \u001b[39m-\u001b[39m b\n\u001b[1;32m    130\u001b[0m     \u001b[39mreturn\u001b[39;00m (torch\u001b[39m.\u001b[39mnorm(w)\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39m2\u001b[39m)\n",
+      "File \u001b[0;32m~/Documents/Opt_Research/Summer_2023/operators.py:73\u001b[0m, in \u001b[0;36mblur_operator_torch\u001b[0;34m(org, shape, sigma)\u001b[0m\n\u001b[1;32m     70\u001b[0m     m \u001b[39m=\u001b[39m \u001b[39mint\u001b[39m(np\u001b[39m.\u001b[39msqrt(org\u001b[39m.\u001b[39msize(\u001b[39m0\u001b[39m)))\n\u001b[1;32m     71\u001b[0m     org \u001b[39m=\u001b[39m org\u001b[39m.\u001b[39mview(m,m)\n\u001b[0;32m---> 73\u001b[0m org\u001b[39m.\u001b[39;49munsqueeze_(\u001b[39m0\u001b[39;49m)\n\u001b[1;32m     74\u001b[0m blurrer \u001b[39m=\u001b[39m GaussianBlur(shape, sigma) \u001b[39m#https://pytorch.org/vision/main/generated/torchvision.transforms.GaussianBlur.html\u001b[39;00m\n\u001b[1;32m     75\u001b[0m blurred \u001b[39m=\u001b[39m blurrer(org)\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: a view of a leaf Variable that requires grad is being used in an in-place operation."
      ]
     }
    ],
