Trying to do FISTA using torch grad

--- a/sr3_attempts.ipynb
+++ b/sr3_attempts.ipynb
@@ -10,7 +10,8 @@
     "from scipy.linalg import svdvals\n",
     "from matplotlib import pyplot as plt\n",
     "import time\n",
-    "import torch"
+    "import torch\n",
+    "from pytorch_wavelets import DWT1DForward, DWT1DInverse"
    ]
   },
   {
@@ -725,7 +726,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x179f0b550>"
+       "<matplotlib.image.AxesImage at 0x15ad812e0>"
       ]
      },
      "execution_count": 2,
@@ -782,7 +783,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x17f54ddc0>"
+       "<matplotlib.image.AxesImage at 0x15dcc87f0>"
       ]
      },
      "execution_count": 4,
@@ -958,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1008,53 +1009,38 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "from operators import grad, gen_function, grad_check\n",
+    "smt = grad(y0,b,gen_function)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
-     "ename": "RuntimeError",
-     "evalue": "a view of a leaf Variable that requires grad is being used in an in-place operation.",
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/Johnson/Documents/Opt_Research/Summer_2023/operators.py:153: UserWarning: The .grad attribute of a Tensor that is not a leaf Tensor is being accessed. Its .grad attribute won't be populated during autograd.backward(). If you indeed want the .grad field to be populated for a non-leaf Tensor, use .retain_grad() on the non-leaf Tensor. If you access the non-leaf Tensor by mistake, make sure you access the leaf Tensor instead. See github.com/pytorch/pytorch/pull/30531 for more informations. (Triggered internally at /Users/runner/work/_temp/anaconda/conda-bld/pytorch_1688627341153/work/build/aten/src/ATen/core/TensorBody.h:492.)\n",
+      "  return x.grad\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for *: 'float' and 'NoneType'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01moperators\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m grad\n\u001b[0;32m----> 2\u001b[0m \u001b[43mgrad\u001b[49m\u001b[43m(\u001b[49m\u001b[43my0\u001b[49m\u001b[43m,\u001b[49m\u001b[43mb\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Documents/Opt_Research/Summer_2023/operators.py:139\u001b[0m, in \u001b[0;36mgrad\u001b[0;34m(x, b)\u001b[0m\n\u001b[1;32m    137\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39m~\u001b[39mx\u001b[39m.\u001b[39mrequires_grad:\n\u001b[1;32m    138\u001b[0m     x\u001b[39m.\u001b[39mrequires_grad_()\n\u001b[0;32m--> 139\u001b[0m w \u001b[39m=\u001b[39m gen_function(x,b)\n\u001b[1;32m    140\u001b[0m w\u001b[39m.\u001b[39mbackward()\n\u001b[1;32m    141\u001b[0m \u001b[39mreturn\u001b[39;00m x\u001b[39m.\u001b[39mgrad\n",
-      "File \u001b[0;32m~/Documents/Opt_Research/Summer_2023/operators.py:128\u001b[0m, in \u001b[0;36mgen_function\u001b[0;34m(x, b)\u001b[0m\n\u001b[1;32m    127\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mgen_function\u001b[39m(x,b):\n\u001b[0;32m--> 128\u001b[0m     Ax \u001b[39m=\u001b[39m blur_operator_torch(x)\n\u001b[1;32m    129\u001b[0m     w \u001b[39m=\u001b[39m Ax \u001b[39m-\u001b[39m b\n\u001b[1;32m    130\u001b[0m     \u001b[39mreturn\u001b[39;00m (torch\u001b[39m.\u001b[39mnorm(w)\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39m2\u001b[39m)\n",
-      "File \u001b[0;32m~/Documents/Opt_Research/Summer_2023/operators.py:73\u001b[0m, in \u001b[0;36mblur_operator_torch\u001b[0;34m(org, shape, sigma)\u001b[0m\n\u001b[1;32m     70\u001b[0m     m \u001b[39m=\u001b[39m \u001b[39mint\u001b[39m(np\u001b[39m.\u001b[39msqrt(org\u001b[39m.\u001b[39msize(\u001b[39m0\u001b[39m)))\n\u001b[1;32m     71\u001b[0m     org \u001b[39m=\u001b[39m org\u001b[39m.\u001b[39mview(m,m)\n\u001b[0;32m---> 73\u001b[0m org\u001b[39m.\u001b[39;49munsqueeze_(\u001b[39m0\u001b[39;49m)\n\u001b[1;32m     74\u001b[0m blurrer \u001b[39m=\u001b[39m GaussianBlur(shape, sigma) \u001b[39m#https://pytorch.org/vision/main/generated/torchvision.transforms.GaussianBlur.html\u001b[39;00m\n\u001b[1;32m     75\u001b[0m blurred \u001b[39m=\u001b[39m blurrer(org)\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: a view of a leaf Variable that requires grad is being used in an in-place operation."
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01moptimization_algs\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m FISTA\n\u001b[0;32m----> 2\u001b[0m y, start, end, step_sizes, function_values \u001b[38;5;241m=\u001b[39m \u001b[43mFISTA\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx_init\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mb\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mt\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mk_FISTA\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmax_iter\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlam\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mLinv\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Documents/Opt_Research/Summer_2023/optimization_algs.py:15\u001b[0m, in \u001b[0;36mFISTA\u001b[0;34m(x, y, b, t, k, max_iter, lam, Linv)\u001b[0m\n\u001b[1;32m     13\u001b[0m y_old \u001b[39m=\u001b[39m y\n\u001b[1;32m     14\u001b[0m t_old \u001b[39m=\u001b[39m t\n\u001b[0;32m---> 15\u001b[0m z \u001b[39m=\u001b[39m y_old \u001b[39m-\u001b[39m Linv\u001b[39m*\u001b[39;49mgrad(y_old, b, gen_function)\n\u001b[1;32m     16\u001b[0m c \u001b[39m=\u001b[39m wavelet_op1d_torch(z)\n\u001b[1;32m     17\u001b[0m d \u001b[39m=\u001b[39m prox_op_torch(c[\u001b[39m0\u001b[39m],lam\u001b[39m/\u001b[39mLinv)\n",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for *: 'float' and 'NoneType'"
      ]
     }
    ],
-   "source": [
-    "from operators import grad\n",
-    "grad(y0,b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([65536])"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x = torch.from_numpy(x_init)\n",
-    "x.size()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "from optimization_algs import FISTA\n",
     "y, start, end, step_sizes, function_values = FISTA(x_init, y0, b, t, k_FISTA, max_iter, lam, Linv)"
