--- a/sr3_attempts.ipynb
+++ b/sr3_attempts.ipynb
@@ -807,6 +807,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cmatbig = np.zeros((m, n))\n",
+    "cmatbig[:m1, :n1] = cmat\n",
+    "cmatbig = np.roll(cmatbig, (-(m1 - 1) // 2, -(n1 - 1) // 2), axis=(0, 1))\n",
+    "cmathat = np.fft.fftn(cmatbig)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1040,6 +1052,68 @@
     "4. Store information for both PG and FISTA on function value and step size (defined above)\n",
     "5. Run prox gradient on deblurring problem.\n",
     "6. Do SR3 and in so doing make everything agnostic inside the optimzation algorithms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch import nn\n",
+    "inp = torch.randn(1, 16, 12, 12)\n",
+    "downsample = nn.Conv2d(16, 16, 3, stride=2, padding=1)\n",
+    "upsample = nn.ConvTranspose2d(16, 16, 3, stride=2, padding=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h = downsample(inp)\n",
+    "out = upsample(h)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 16, 12, 12])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inp.size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 16, 11, 11])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out.size()"
    ]
   },
   {
