GOT ADJOINT TEST TO WORK FOR BLUR

--- a/sr3_attempts.ipynb
+++ b/sr3_attempts.ipynb
@@ -725,7 +725,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x16c0496a0>"
+       "<matplotlib.image.AxesImage at 0x1506ca6a0>"
       ]
      },
      "execution_count": 2,
@@ -782,7 +782,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x17c4456d0>"
+       "<matplotlib.image.AxesImage at 0x155546700>"
       ]
      },
      "execution_count": 4,
@@ -804,18 +804,6 @@
     "from operators import blur_operator_torch\n",
     "blurred = blur_operator_torch(original)\n",
     "plt.imshow(blurred.view(m,m),interpolation=\"nearest\",cmap=plt.cm.gray)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cmatbig = np.zeros((m, n))\n",
-    "cmatbig[:m1, :n1] = cmat\n",
-    "cmatbig = np.roll(cmatbig, (-(m1 - 1) // 2, -(n1 - 1) // 2), axis=(0, 1))\n",
-    "cmathat = np.fft.fftn(cmatbig)"
    ]
   },
   {
@@ -841,23 +829,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This test fails\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "True"
+       "(tensor(17381.7852), tensor(17381.4414), tensor(0.3438))"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from operator_tests import test_blur\n",
-    "test_blur(org, blurred,1e-1)"
+    "test_blur(original, blurred,1e-1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This essentially passes."
    ]
   },
   {
