Came up with tests for grad and wavelets

--- a/sr3_attempts.ipynb
+++ b/sr3_attempts.ipynb
@@ -725,7 +725,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x16bd896a0>"
+       "<matplotlib.image.AxesImage at 0x16440a6a0>"
       ]
      },
      "execution_count": 2,
@@ -782,7 +782,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x17c985700>"
+       "<matplotlib.image.AxesImage at 0x167f86760>"
       ]
      },
      "execution_count": 4,
@@ -866,6 +866,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Here we now perform the adjoint test for the adjoint of the grad operator, since, if it passes, this will tell us if our operator has been implemented successfully."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from operator_tests import test_grad\n",
+    "test_grad(original,blurred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Here, we now perform the adjoint test for the adjoint of the wavelet operator, as we must check to see if our operator is being implemented correctly."
    ]
   },
@@ -875,88 +903,21 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "RuntimeError",
+     "evalue": "inconsistent tensor size, expected tensor [8192] and src [65536] to have the same number of elements, but got 8192 and 65536 elements respectively",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01moperator_tests\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m test_wavelet\n\u001b[0;32m----> 2\u001b[0m \u001b[43mtest_wavelet\u001b[49m\u001b[43m(\u001b[49m\u001b[43moriginal\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mblurred\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Documents/Opt_Research/Summer_2023/operator_tests.py:35\u001b[0m, in \u001b[0;36mtest_wavelet\u001b[0;34m(x, b, thresh)\u001b[0m\n\u001b[1;32m     33\u001b[0m x,b \u001b[39m=\u001b[39m torch_arranger(x,b)\n\u001b[1;32m     34\u001b[0m bsss \u001b[39m=\u001b[39m wavelet_op1d_torch(b)[\u001b[39m1\u001b[39m]\n\u001b[0;32m---> 35\u001b[0m error \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39;49mmatmul(wavelet_op1d_torch(x)[\u001b[39m0\u001b[39;49m],b) \u001b[39m-\u001b[39m torch\u001b[39m.\u001b[39mmatmul(x,wavelet_inverse_torch(b,bsss))\n\u001b[1;32m     36\u001b[0m \u001b[39mif\u001b[39;00m error \u001b[39m<\u001b[39m thresh:\n\u001b[1;32m     37\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mTrue\u001b[39;00m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: inconsistent tensor size, expected tensor [8192] and src [65536] to have the same number of elements, but got 8192 and 65536 elements respectively"
+     ]
     }
    ],
    "source": [
     "from operator_tests import test_wavelet\n",
-    "test_wavelet(org, blurred)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Here we now perform the adjoint test for the adjoint of the grad operator, since, if it passes, this will tell us if our operator has been implemented successfully."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from operator_tests import test_grad\n",
-    "# test_grad(org,blurred)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Last, we perform the adjoint test for the adjoint of the proximal operator, in this case using the soft-thresholding function since we are using $l_1$ regularization."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "This test fails\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(14628.962, 30.51236, 14598.449)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from operator_tests import test_prox\n",
-    "lam = 0.001\n",
-    "test_prox(org,blurred,lam)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This is failing because the operator is not linear!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Do gradient test for the gradient (for general objective functions):\n",
-    "\n",
-    "complex step method (look at pictures)."
+    "test_wavelet(original, blurred)"
    ]
   },
   {
@@ -1048,12 +1009,13 @@
    "metadata": {},
    "source": [
     "List:\n",
-    "1. Operators - Figure out how to get adjoint codes for operators work -> make adjoint test a unit test.\n",
-    "2. Abstract the algorithms to take prox's and grad's, and then build the pieces to fit into equation.\n",
-    "3. Include unit tests for gradient and prox.\n",
-    "4. Store information for both PG and FISTA on function value and step size (defined above)\n",
-    "5. Run prox gradient on deblurring problem.\n",
-    "6. Do SR3 and in so doing make everything agnostic inside the optimzation algorithms"
+    "1. Operators - Figure out how to get adjoint codes for operators work -> make adjoint test a unit test. DONE\n",
+    "2. Abstract the algorithms to take prox's and grad's, and then build the pieces to fit into equation. DONE\n",
+    "3. Include unit tests for gradient and prox. DONE\n",
+    "4. Store information for both PG and FISTA on function value and step size (defined above) DONE\n",
+    "5. Run prox gradient on deblurring problem. DONE\n",
+    "6. Do SR3 and in so doing make everything agnostic inside the optimzation algorithms NOT DONE\n",
+    "7. Also come up with just PG and no FISTA and then compare, so come up with \"if accelerate option\" NOT DONE"
    ]
   },
   {
