--- a/sr3_attempts.ipynb
+++ b/sr3_attempts.ipynb
@@ -725,7 +725,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x179d8a670>"
+       "<matplotlib.image.AxesImage at 0x169c8a670>"
       ]
      },
      "execution_count": 2,
@@ -782,7 +782,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x17ea85730>"
+       "<matplotlib.image.AxesImage at 0x16da06700>"
       ]
      },
      "execution_count": 4,
@@ -855,10 +855,23 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "Adjoint test for blur operator failed. The error is 0.506836",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01moperator_tests\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m test_blur\n\u001b[0;32m----> 2\u001b[0m \u001b[43mtest_blur\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrand_1\u001b[49m\u001b[43m,\u001b[49m\u001b[43mrand_2\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Documents/Opt_Research/Summer_2023/operator_tests.py:69\u001b[0m, in \u001b[0;36mtest_blur\u001b[0;34m(x, b, thresh)\u001b[0m\n\u001b[1;32m     67\u001b[0m x, b \u001b[39m=\u001b[39m torch_arranger(x,b)\n\u001b[1;32m     68\u001b[0m error \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mmatmul(blur_operator_torch(x),b) \u001b[39m-\u001b[39m torch\u001b[39m.\u001b[39mmatmul(x, blur_adjoint_torch(b))\n\u001b[0;32m---> 69\u001b[0m \u001b[39massert\u001b[39;00m error \u001b[39m<\u001b[39m thresh, \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mAdjoint test for blur operator failed. The error is \u001b[39m\u001b[39m{\u001b[39;00merror\u001b[39m:\u001b[39;00m\u001b[39m.6f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: Adjoint test for blur operator failed. The error is 0.506836"
+     ]
+    }
+   ],
    "source": [
     "from operator_tests import test_blur\n",
-    "test_blur(rand_1,rand_2,10)"
+    "test_blur(rand_1,rand_2)"
    ]
   },
   {
@@ -876,14 +889,129 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Todo for next week:\n",
+    "1. Fix grad function so it passes the unit test. It should be passing.\n",
+    "2. Find information on conjugate gradient method and conjugate gradient differentiation through torch. For SR3, we need to be running about 20 steps of CG to find inverse of $H_{\\kappa}$, where we have\n",
+    "\\begin{align*}\n",
+    "    H_\\kappa x = A^{\\top}Ax + \\kappa x\n",
+    "\\end{align*}\n",
+    "Where does the differentiation come in? Sasha wanted me to do this on torch because everything else has been running on torch. I assume after I've finished knowing how the gradient works. Also, where does the gradient come in? Because it seems that there isn't really a gradient being calculated or found.\n",
+    "3. Fix wavelet operators to be inside prox function. That's easy to do.\n",
+    "4. Do Woodbury matrix identity proof.\n",
+    "5. Work on NSF and DOE applications."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from operator_tests import test_grad\n",
-    "test_grad(rand_1,rand_2,10)"
+    "def gen_function(x,b):\n",
+    "    Ax = blur_operator_torch(x)\n",
+    "    w = Ax - b\n",
+    "    return (torch.sum(w**2))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "Adjoint test for gradient failed. The normed error is 2.068256",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01moperator_tests\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m test_grad\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# rand_1.grad.zero_()\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[43mtest_grad\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrand_1\u001b[49m\u001b[43m,\u001b[49m\u001b[43mrand_2\u001b[49m\u001b[43m,\u001b[49m\u001b[43mgen_function\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Documents/Opt_Research/Summer_2023/operator_tests.py:60\u001b[0m, in \u001b[0;36mtest_grad\u001b[0;34m(x, b, fcn, thresh)\u001b[0m\n\u001b[1;32m     58\u001b[0m error \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mlinalg\u001b[39m.\u001b[39mnorm(grad(x,b,fcn) \u001b[39m-\u001b[39m grad_check(x,b))\n\u001b[1;32m     59\u001b[0m x\u001b[39m.\u001b[39mgrad\u001b[39m.\u001b[39mzero_()\n\u001b[0;32m---> 60\u001b[0m \u001b[39massert\u001b[39;00m error \u001b[39m<\u001b[39m thresh, \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mAdjoint test for gradient failed. The normed error is \u001b[39m\u001b[39m{\u001b[39;00merror\u001b[39m:\u001b[39;00m\u001b[39m.6f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: Adjoint test for gradient failed. The normed error is 2.068256"
+     ]
+    }
+   ],
+   "source": [
+    "from operator_tests import test_grad\n",
+    "# rand_1.grad.zero_()\n",
+    "test_grad(rand_1,rand_2,gen_function,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([-0.0366, -0.0638, -0.0484, -0.0416, -0.0466, -0.0592, -0.0847, -0.0691,\n",
+       "        -0.0462, -0.0191])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from operators import grad, grad_check\n",
+    "rand_1.grad.zero_()\n",
+    "# rand_2.grad.zero_()\n",
+    "grad(rand_1, rand_2, gen_function)[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([-0.0733, -0.0695, -0.0609, -0.0546, -0.0756, -0.1174, -0.1595, -0.1343,\n",
+       "        -0.1041, -0.0580], grad_fn=<SliceBackward0>)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grad_check(rand_1, rand_2)[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(2.0683, grad_fn=<LinalgVectorNormBackward0>)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rand_1.grad.zero_()\n",
+    "torch.linalg.norm(grad(rand_1, rand_2, gen_function) - grad_check(rand_1, rand_2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -915,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -936,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -964,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
