--- a/sr3_attempts.ipynb
+++ b/sr3_attempts.ipynb
@@ -10,7 +10,8 @@
     "from scipy.linalg import svdvals\n",
     "from matplotlib import pyplot as plt\n",
     "import time\n",
-    "import torch"
+    "import torch\n",
+    "from torch import nn"
    ]
   },
   {
@@ -725,7 +726,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x169c8a670>"
+       "<matplotlib.image.AxesImage at 0x16674a640>"
       ]
      },
      "execution_count": 2,
@@ -782,7 +783,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x16da06700>"
+       "<matplotlib.image.AxesImage at 0x177389700>"
       ]
      },
      "execution_count": 4,
@@ -857,21 +858,197 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "AssertionError",
-     "evalue": "Adjoint test for blur operator failed. The error is 0.506836",
+     "ename": "RuntimeError",
+     "evalue": "shifts and dimensions must align. shifts: 2, dims:0",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
       "Cell \u001b[0;32mIn[6], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01moperator_tests\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m test_blur\n\u001b[0;32m----> 2\u001b[0m \u001b[43mtest_blur\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrand_1\u001b[49m\u001b[43m,\u001b[49m\u001b[43mrand_2\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Documents/Opt_Research/Summer_2023/operator_tests.py:69\u001b[0m, in \u001b[0;36mtest_blur\u001b[0;34m(x, b, thresh)\u001b[0m\n\u001b[1;32m     67\u001b[0m x, b \u001b[39m=\u001b[39m torch_arranger(x,b)\n\u001b[1;32m     68\u001b[0m error \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mmatmul(blur_operator_torch(x),b) \u001b[39m-\u001b[39m torch\u001b[39m.\u001b[39mmatmul(x, blur_adjoint_torch(b))\n\u001b[0;32m---> 69\u001b[0m \u001b[39massert\u001b[39;00m error \u001b[39m<\u001b[39m thresh, \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mAdjoint test for blur operator failed. The error is \u001b[39m\u001b[39m{\u001b[39;00merror\u001b[39m:\u001b[39;00m\u001b[39m.6f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: Adjoint test for blur operator failed. The error is 0.506836"
+      "File \u001b[0;32m~/Documents/Opt_Research/Summer_2023/operator_tests.py:68\u001b[0m, in \u001b[0;36mtest_blur\u001b[0;34m(x, b, thresh)\u001b[0m\n\u001b[1;32m     63\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m     64\u001b[0m \u001b[39mThis is the unit test for the blur operator. Since blurring is linear, we simply perform a standard\u001b[39;00m\n\u001b[1;32m     65\u001b[0m \u001b[39madjoint test.\u001b[39;00m\n\u001b[1;32m     66\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m     67\u001b[0m x, b \u001b[39m=\u001b[39m torch_arranger(x,b)\n\u001b[0;32m---> 68\u001b[0m error \u001b[39m=\u001b[39m \u001b[39mabs\u001b[39m(torch\u001b[39m.\u001b[39mmatmul(blur_operator_torch(x),b) \u001b[39m-\u001b[39m torch\u001b[39m.\u001b[39mmatmul(x, blur_adjoint_torch(b)))\n\u001b[1;32m     69\u001b[0m \u001b[39massert\u001b[39;00m error \u001b[39m<\u001b[39m thresh, \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mAdjoint test for blur operator failed. The error is \u001b[39m\u001b[39m{\u001b[39;00merror\u001b[39m:\u001b[39;00m\u001b[39m.6f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n",
+      "File \u001b[0;32m~/Documents/Opt_Research/Summer_2023/operators.py:173\u001b[0m, in \u001b[0;36mblur_adjoint_torch\u001b[0;34m(org, shape, sigma)\u001b[0m\n\u001b[1;32m    170\u001b[0m     org \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mreshape(org, (m,m))\n\u001b[1;32m    172\u001b[0m psf \u001b[39m=\u001b[39m fspecial(shape, sigma, \u001b[39mTrue\u001b[39;00m)\n\u001b[0;32m--> 173\u001b[0m psf \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39;49mroll(torch\u001b[39m.\u001b[39;49mflip(psf, [\u001b[39m0\u001b[39;49m,\u001b[39m1\u001b[39;49m]),shifts\u001b[39m=\u001b[39;49m(\u001b[39m1\u001b[39;49m,\u001b[39m1\u001b[39;49m))\n\u001b[1;32m    174\u001b[0m \u001b[39m# psf = torch.flip(psf, [0,1])\u001b[39;00m\n\u001b[1;32m    175\u001b[0m padding \u001b[39m=\u001b[39m nn\u001b[39m.\u001b[39mReflectionPad2d(\u001b[39m4\u001b[39m)\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: shifts and dimensions must align. shifts: 2, dims:0"
      ]
     }
    ],
    "source": [
     "from operator_tests import test_blur\n",
     "test_blur(rand_1,rand_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.nn.functional as F"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fspecial_1d(kernel_size=3, sigma=0.5, ret_torch=False):\n",
+    "    \"\"\"\n",
+    "    1D gaussian mask - equivalent to MATLAB's fspecial('gaussian', [shape], [sigma])\n",
+    "    \"\"\"\n",
+    "    x = np.arange(-(kernel_size - 1) / 2, (kernel_size + 1) / 2)\n",
+    "    h = np.exp(-x**2 / (2 * sigma**2))\n",
+    "    h[h < np.finfo(h.dtype).eps * h.max()] = 0\n",
+    "    sumh = h.sum()\n",
+    "    if sumh != 0:\n",
+    "        h /= sumh\n",
+    "    if ret_torch:\n",
+    "        h = torch.from_numpy(h)\n",
+    "        h = h.to(torch.float)\n",
+    "    return h"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def blur_operator_torch_1d(org, shape=9, sigma=4.0):\n",
+    "    if type(org) != torch.Tensor:\n",
+    "        org = torch.from_numpy(org)\n",
+    "\n",
+    "    if len(org.size()) > 1:\n",
+    "        org = org.view(-1)\n",
+    "\n",
+    "    psf = fspecial_1d(shape,sigma,True)\n",
+    "    padding = nn.ReflectionPad1d(shape // 2)\n",
+    "    org = org.unsqueeze(0)\n",
+    "    org_pad = padding(org)\n",
+    "    org_pad = org_pad.to(torch.float)\n",
+    "    blurred = F.conv1d(org_pad, psf.unsqueeze(0).unsqueeze(0))\n",
+    "    blurred = blurred.squeeze()\n",
+    "\n",
+    "    return blurred \n",
+    "\n",
+    "def blur_adjoint_torch_1d(org, shape=9, sigma=4.0):\n",
+    "    \"\"\"\n",
+    "    The transpose will come just from completely flipping the convolution kernel, and then performing the convolution operation.\n",
+    "    \"\"\"\n",
+    "    if type(org) != torch.Tensor:\n",
+    "        org = torch.from_numpy(org)\n",
+    "\n",
+    "    if len(org.size()) > 1:\n",
+    "        org = org.view(-1)\n",
+    "\n",
+    "    psf = fspecial_1d(shape, sigma,True)\n",
+    "    psf = torch.flip(psf, [0])\n",
+    "    padding = nn.ReflectionPad1d(shape // 2)\n",
+    "    org = org.unsqueeze(0)\n",
+    "    org_pad = padding(org)\n",
+    "    org_pad = org_pad.to(torch.float)\n",
+    "    adjoint_blurred = F.conv1d(org_pad, psf.unsqueeze(0).unsqueeze(0))\n",
+    "    adjoint_blurred = adjoint_blurred.squeeze()\n",
+    "\n",
+    "    return adjoint_blurred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from operators import blur_adjoint_torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(16382.7852)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "torch.matmul(blur_operator_torch(rand_1),rand_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "shifts and dimensions must align. shifts: 1, dims:2",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[14], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m torch\u001b[38;5;241m.\u001b[39mmatmul(rand_1, \u001b[43mblur_adjoint_torch\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrand_2\u001b[49m\u001b[43m)\u001b[49m)\n",
+      "File \u001b[0;32m~/Documents/Opt_Research/Summer_2023/operators.py:173\u001b[0m, in \u001b[0;36mblur_adjoint_torch\u001b[0;34m(org, shape, sigma)\u001b[0m\n\u001b[1;32m    170\u001b[0m     org \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mreshape(org, (m,m))\n\u001b[1;32m    172\u001b[0m psf \u001b[39m=\u001b[39m fspecial(shape, sigma, \u001b[39mTrue\u001b[39;00m)\n\u001b[0;32m--> 173\u001b[0m psf \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39;49mroll(torch\u001b[39m.\u001b[39;49mflip(psf, [\u001b[39m0\u001b[39;49m,\u001b[39m1\u001b[39;49m]),shifts\u001b[39m=\u001b[39;49m\u001b[39m1\u001b[39;49m,dims\u001b[39m=\u001b[39;49m(\u001b[39m0\u001b[39;49m,\u001b[39m1\u001b[39;49m))\n\u001b[1;32m    174\u001b[0m padding \u001b[39m=\u001b[39m nn\u001b[39m.\u001b[39mReflectionPad2d(\u001b[39m4\u001b[39m)\n\u001b[1;32m    175\u001b[0m org\u001b[39m.\u001b[39munsqueeze_(\u001b[39m0\u001b[39m)\u001b[39m.\u001b[39munsqueeze_(\u001b[39m0\u001b[39m)\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: shifts and dimensions must align. shifts: 1, dims:2"
+     ]
+    }
+   ],
+   "source": [
+    "torch.matmul(rand_1, blur_adjoint_torch(rand_2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1, 2],\n",
+       "        [3, 4],\n",
+       "        [5, 6],\n",
+       "        [7, 8]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_try = torch.tensor([1, 2, 3, 4, 5, 6, 7, 8]).view(4, 2)\n",
+    "x_try"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[8, 7],\n",
+       "        [2, 1],\n",
+       "        [4, 3],\n",
+       "        [6, 5]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.roll(x_try,(1,1),(0,1))"
    ]
   },
   {
@@ -906,31 +1083,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def gen_function(x,b):\n",
     "    Ax = blur_operator_torch(x)\n",
     "    w = Ax - b\n",
-    "    return (torch.sum(w**2))"
+    "    return (torch.linalg.norm(w)**2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "ename": "AssertionError",
-     "evalue": "Adjoint test for gradient failed. The normed error is 2.068256",
+     "evalue": "Adjoint test for gradient failed. The normed error is 2.194461",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01moperator_tests\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m test_grad\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# rand_1.grad.zero_()\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[43mtest_grad\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrand_1\u001b[49m\u001b[43m,\u001b[49m\u001b[43mrand_2\u001b[49m\u001b[43m,\u001b[49m\u001b[43mgen_function\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[11], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01moperator_tests\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m test_grad\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# rand_1.grad.zero_()\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[43mtest_grad\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrand_1\u001b[49m\u001b[43m,\u001b[49m\u001b[43mrand_2\u001b[49m\u001b[43m,\u001b[49m\u001b[43mgen_function\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n",
       "File \u001b[0;32m~/Documents/Opt_Research/Summer_2023/operator_tests.py:60\u001b[0m, in \u001b[0;36mtest_grad\u001b[0;34m(x, b, fcn, thresh)\u001b[0m\n\u001b[1;32m     58\u001b[0m error \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mlinalg\u001b[39m.\u001b[39mnorm(grad(x,b,fcn) \u001b[39m-\u001b[39m grad_check(x,b))\n\u001b[1;32m     59\u001b[0m x\u001b[39m.\u001b[39mgrad\u001b[39m.\u001b[39mzero_()\n\u001b[0;32m---> 60\u001b[0m \u001b[39massert\u001b[39;00m error \u001b[39m<\u001b[39m thresh, \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mAdjoint test for gradient failed. The normed error is \u001b[39m\u001b[39m{\u001b[39;00merror\u001b[39m:\u001b[39;00m\u001b[39m.6f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: Adjoint test for gradient failed. The normed error is 2.068256"
+      "\u001b[0;31mAssertionError\u001b[0m: Adjoint test for gradient failed. The normed error is 2.194461"
      ]
     }
    ],
@@ -948,8 +1125,8 @@
     {
      "data": {
       "text/plain": [
-       "tensor([-0.0366, -0.0638, -0.0484, -0.0416, -0.0466, -0.0592, -0.0847, -0.0691,\n",
-       "        -0.0462, -0.0191])"
+       "tensor([0.0444, 0.0881, 0.0744, 0.0552, 0.0428, 0.0574, 0.0329, 0.0415, 0.0463,\n",
+       "        0.0599])"
       ]
      },
      "execution_count": 9,
@@ -972,8 +1149,8 @@
     {
      "data": {
       "text/plain": [
-       "tensor([-0.0733, -0.0695, -0.0609, -0.0546, -0.0756, -0.1174, -0.1595, -0.1343,\n",
-       "        -0.1041, -0.0580], grad_fn=<SliceBackward0>)"
+       "tensor([0.1775, 0.1775, 0.1550, 0.1105, 0.0911, 0.1049, 0.0682, 0.0902, 0.0973,\n",
+       "        0.1242], grad_fn=<SliceBackward0>)"
       ]
      },
      "execution_count": 10,
@@ -986,34 +1163,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(2.0683, grad_fn=<LinalgVectorNormBackward0>)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rand_1.grad.zero_()\n",
-    "torch.linalg.norm(grad(rand_1, rand_2, gen_function) - grad_check(rand_1, rand_2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1022,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1043,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1064,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1073,6 +1222,120 @@
     "y0 = x_init.clone()\n",
     "t = 1\n",
     "lam = 2e-5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss = nn.MSELoss()\n",
+    "def loss_finder(x,b,loss):\n",
+    "    inp = blur_operator_torch(x)\n",
+    "    output = loss(inp,b)\n",
+    "    return output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_func(x,b):\n",
+    "    return torch.linalg.norm(blur_operator_torch_1d(x) - b)**2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def grad_test(x, b, fcn):\n",
+    "    \"\"\"\n",
+    "    Uses PyTorch autodifferentiation to compute gradients at every step\n",
+    "    \"\"\"\n",
+    "    if type(b) != torch.Tensor:\n",
+    "        b = torch.from_numpy(b)\n",
+    "    if type(x) != torch.Tensor:\n",
+    "        x = torch.from_numpy(x)\n",
+    "    if x.requires_grad == False:\n",
+    "        x.requires_grad_()\n",
+    "    w = fcn(x,b)\n",
+    "    w.backward()\n",
+    "    return x.grad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = torch.rand(10,10)\n",
+    "x_ = torch.rand(25)\n",
+    "b_ = torch.rand(25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([-0.1938, -0.4192, -0.3270, -0.1731, -0.0654,  0.0232,  0.0435,  0.1846,\n",
+       "         0.1894,  0.2137,  0.3047,  0.2152,  0.1942,  0.2813,  0.2086,  0.3470,\n",
+       "         0.2504,  0.2996,  0.3182,  0.2232,  0.2480,  0.1726,  0.1079,  0.2075,\n",
+       "         0.0535])"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# from operators import grad, grad_check\n",
+    "grad_test(x_,b_,test_func)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from operators import blur_adjoint_torch\n",
+    "def grad_check_test(A,x,b):\n",
+    "    return 2.0*(blur_adjoint_torch_1d(blur_operator_torch_1d(x)) - blur_adjoint_torch_1d(b))\n",
+    "    # return 2.0*(torch.matmul(A.T,torch.matmul(A,x)) - torch.matmul(A.T,b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([-0.3809, -0.4125, -0.3206, -0.1671, -0.0599,  0.0232,  0.0435,  0.1846,\n",
+       "         0.1894,  0.2137,  0.3047,  0.2152,  0.1942,  0.2813,  0.2086,  0.3470,\n",
+       "         0.2504,  0.2996,  0.3182,  0.2232,  0.2270,  0.1495,  0.0831,  0.1817,\n",
+       "         0.0809], grad_fn=<MulBackward0>)"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grad_check_test(A,x_,b_)"
    ]
   },
   {
