Some simple attempts that didn't work

--- a/sr3_attempts.ipynb
+++ b/sr3_attempts.ipynb
@@ -11,7 +11,8 @@
     "from matplotlib import pyplot as plt\n",
     "import time\n",
     "import torch\n",
-    "from torch import nn"
+    "from torch import nn\n",
+    "import torch.nn.functional as F"
    ]
   },
   {
@@ -720,16 +721,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x16674a640>"
+       "<matplotlib.image.AxesImage at 0x160160100>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -751,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -777,16 +778,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x177389700>"
+       "<matplotlib.image.AxesImage at 0x1602394f0>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -837,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -854,20 +855,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "ename": "RuntimeError",
-     "evalue": "shifts and dimensions must align. shifts: 2, dims:0",
+     "ename": "AssertionError",
+     "evalue": "Adjoint test for blur operator failed. The error is 2.984375",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01moperator_tests\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m test_blur\n\u001b[0;32m----> 2\u001b[0m \u001b[43mtest_blur\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrand_1\u001b[49m\u001b[43m,\u001b[49m\u001b[43mrand_2\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Documents/Opt_Research/Summer_2023/operator_tests.py:68\u001b[0m, in \u001b[0;36mtest_blur\u001b[0;34m(x, b, thresh)\u001b[0m\n\u001b[1;32m     63\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m     64\u001b[0m \u001b[39mThis is the unit test for the blur operator. Since blurring is linear, we simply perform a standard\u001b[39;00m\n\u001b[1;32m     65\u001b[0m \u001b[39madjoint test.\u001b[39;00m\n\u001b[1;32m     66\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m     67\u001b[0m x, b \u001b[39m=\u001b[39m torch_arranger(x,b)\n\u001b[0;32m---> 68\u001b[0m error \u001b[39m=\u001b[39m \u001b[39mabs\u001b[39m(torch\u001b[39m.\u001b[39mmatmul(blur_operator_torch(x),b) \u001b[39m-\u001b[39m torch\u001b[39m.\u001b[39mmatmul(x, blur_adjoint_torch(b)))\n\u001b[1;32m     69\u001b[0m \u001b[39massert\u001b[39;00m error \u001b[39m<\u001b[39m thresh, \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mAdjoint test for blur operator failed. The error is \u001b[39m\u001b[39m{\u001b[39;00merror\u001b[39m:\u001b[39;00m\u001b[39m.6f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n",
-      "File \u001b[0;32m~/Documents/Opt_Research/Summer_2023/operators.py:173\u001b[0m, in \u001b[0;36mblur_adjoint_torch\u001b[0;34m(org, shape, sigma)\u001b[0m\n\u001b[1;32m    170\u001b[0m     org \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mreshape(org, (m,m))\n\u001b[1;32m    172\u001b[0m psf \u001b[39m=\u001b[39m fspecial(shape, sigma, \u001b[39mTrue\u001b[39;00m)\n\u001b[0;32m--> 173\u001b[0m psf \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39;49mroll(torch\u001b[39m.\u001b[39;49mflip(psf, [\u001b[39m0\u001b[39;49m,\u001b[39m1\u001b[39;49m]),shifts\u001b[39m=\u001b[39;49m(\u001b[39m1\u001b[39;49m,\u001b[39m1\u001b[39;49m))\n\u001b[1;32m    174\u001b[0m \u001b[39m# psf = torch.flip(psf, [0,1])\u001b[39;00m\n\u001b[1;32m    175\u001b[0m padding \u001b[39m=\u001b[39m nn\u001b[39m.\u001b[39mReflectionPad2d(\u001b[39m4\u001b[39m)\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: shifts and dimensions must align. shifts: 2, dims:0"
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[14], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01moperator_tests\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m test_blur\n\u001b[0;32m----> 2\u001b[0m \u001b[43mtest_blur\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrand_1\u001b[49m\u001b[43m,\u001b[49m\u001b[43mrand_2\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Documents/Opt_Research/Summer_2023/operator_tests.py:69\u001b[0m, in \u001b[0;36mtest_blur\u001b[0;34m(x, b, thresh)\u001b[0m\n\u001b[1;32m     67\u001b[0m x, b \u001b[39m=\u001b[39m torch_arranger(x,b)\n\u001b[1;32m     68\u001b[0m error \u001b[39m=\u001b[39m \u001b[39mabs\u001b[39m(torch\u001b[39m.\u001b[39mmatmul(blur_operator_torch(x),b) \u001b[39m-\u001b[39m torch\u001b[39m.\u001b[39mmatmul(x, blur_adjoint_torch(b)))\n\u001b[0;32m---> 69\u001b[0m \u001b[39massert\u001b[39;00m error \u001b[39m<\u001b[39m thresh, \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mAdjoint test for blur operator failed. The error is \u001b[39m\u001b[39m{\u001b[39;00merror\u001b[39m:\u001b[39;00m\u001b[39m.6f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: Adjoint test for blur operator failed. The error is 2.984375"
      ]
     }
    ],
@@ -878,83 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch.nn.functional as F"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def fspecial_1d(kernel_size=3, sigma=0.5, ret_torch=False):\n",
-    "    \"\"\"\n",
-    "    1D gaussian mask - equivalent to MATLAB's fspecial('gaussian', [shape], [sigma])\n",
-    "    \"\"\"\n",
-    "    x = np.arange(-(kernel_size - 1) / 2, (kernel_size + 1) / 2)\n",
-    "    h = np.exp(-x**2 / (2 * sigma**2))\n",
-    "    h[h < np.finfo(h.dtype).eps * h.max()] = 0\n",
-    "    sumh = h.sum()\n",
-    "    if sumh != 0:\n",
-    "        h /= sumh\n",
-    "    if ret_torch:\n",
-    "        h = torch.from_numpy(h)\n",
-    "        h = h.to(torch.float)\n",
-    "    return h"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def blur_operator_torch_1d(org, shape=9, sigma=4.0):\n",
-    "    if type(org) != torch.Tensor:\n",
-    "        org = torch.from_numpy(org)\n",
-    "\n",
-    "    if len(org.size()) > 1:\n",
-    "        org = org.view(-1)\n",
-    "\n",
-    "    psf = fspecial_1d(shape,sigma,True)\n",
-    "    padding = nn.ReflectionPad1d(shape // 2)\n",
-    "    org = org.unsqueeze(0)\n",
-    "    org_pad = padding(org)\n",
-    "    org_pad = org_pad.to(torch.float)\n",
-    "    blurred = F.conv1d(org_pad, psf.unsqueeze(0).unsqueeze(0))\n",
-    "    blurred = blurred.squeeze()\n",
-    "\n",
-    "    return blurred \n",
-    "\n",
-    "def blur_adjoint_torch_1d(org, shape=9, sigma=4.0):\n",
-    "    \"\"\"\n",
-    "    The transpose will come just from completely flipping the convolution kernel, and then performing the convolution operation.\n",
-    "    \"\"\"\n",
-    "    if type(org) != torch.Tensor:\n",
-    "        org = torch.from_numpy(org)\n",
-    "\n",
-    "    if len(org.size()) > 1:\n",
-    "        org = org.view(-1)\n",
-    "\n",
-    "    psf = fspecial_1d(shape, sigma,True)\n",
-    "    psf = torch.flip(psf, [0])\n",
-    "    padding = nn.ReflectionPad1d(shape // 2)\n",
-    "    org = org.unsqueeze(0)\n",
-    "    org_pad = padding(org)\n",
-    "    org_pad = org_pad.to(torch.float)\n",
-    "    adjoint_blurred = F.conv1d(org_pad, psf.unsqueeze(0).unsqueeze(0))\n",
-    "    adjoint_blurred = adjoint_blurred.squeeze()\n",
-    "\n",
-    "    return adjoint_blurred"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -963,16 +887,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(16382.7852)"
+       "tensor([[0.0639, 0.4651],\n",
+       "        [0.1028, 0.9405]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kernel = torch.rand(2,2)\n",
+    "kernel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.9405, 0.1028],\n",
+       "        [0.4651, 0.0639]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kernel_flipped = torch.flip(kernel,[0,1])\n",
+    "kernel_flipped"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(16379.3350)"
+      ]
+     },
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -984,20 +952,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "RuntimeError",
-     "evalue": "shifts and dimensions must align. shifts: 1, dims:2",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[14], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m torch\u001b[38;5;241m.\u001b[39mmatmul(rand_1, \u001b[43mblur_adjoint_torch\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrand_2\u001b[49m\u001b[43m)\u001b[49m)\n",
-      "File \u001b[0;32m~/Documents/Opt_Research/Summer_2023/operators.py:173\u001b[0m, in \u001b[0;36mblur_adjoint_torch\u001b[0;34m(org, shape, sigma)\u001b[0m\n\u001b[1;32m    170\u001b[0m     org \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mreshape(org, (m,m))\n\u001b[1;32m    172\u001b[0m psf \u001b[39m=\u001b[39m fspecial(shape, sigma, \u001b[39mTrue\u001b[39;00m)\n\u001b[0;32m--> 173\u001b[0m psf \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39;49mroll(torch\u001b[39m.\u001b[39;49mflip(psf, [\u001b[39m0\u001b[39;49m,\u001b[39m1\u001b[39;49m]),shifts\u001b[39m=\u001b[39;49m\u001b[39m1\u001b[39;49m,dims\u001b[39m=\u001b[39;49m(\u001b[39m0\u001b[39;49m,\u001b[39m1\u001b[39;49m))\n\u001b[1;32m    174\u001b[0m padding \u001b[39m=\u001b[39m nn\u001b[39m.\u001b[39mReflectionPad2d(\u001b[39m4\u001b[39m)\n\u001b[1;32m    175\u001b[0m org\u001b[39m.\u001b[39munsqueeze_(\u001b[39m0\u001b[39m)\u001b[39m.\u001b[39munsqueeze_(\u001b[39m0\u001b[39m)\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: shifts and dimensions must align. shifts: 1, dims:2"
-     ]
+     "data": {
+      "text/plain": [
+       "tensor(16384.3945)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1006,49 +972,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[1, 2],\n",
-       "        [3, 4],\n",
-       "        [5, 6],\n",
-       "        [7, 8]])"
+       "tensor([[0.5139, 0.5148, 0.5196,  ..., 0.5391, 0.5689, 0.5510],\n",
+       "        [0.4961, 0.4979, 0.5028,  ..., 0.5454, 0.5684, 0.5550],\n",
+       "        [0.4874, 0.4919, 0.4975,  ..., 0.5390, 0.5567, 0.5425],\n",
+       "        ...,\n",
+       "        [0.5178, 0.5211, 0.5179,  ..., 0.5174, 0.4998, 0.5120],\n",
+       "        [0.5238, 0.5289, 0.5237,  ..., 0.5051, 0.4872, 0.4945],\n",
+       "        [0.5057, 0.5087, 0.5029,  ..., 0.5098, 0.4852, 0.4897]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x_try = torch.tensor([1, 2, 3, 4, 5, 6, 7, 8]).view(4, 2)\n",
-    "x_try"
+    "blur_operator_torch(rand_1).view(m,m).T"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[8, 7],\n",
-       "        [2, 1],\n",
-       "        [4, 3],\n",
-       "        [6, 5]])"
+       "tensor([[0.5139, 0.4961, 0.4874,  ..., 0.5178, 0.5238, 0.5057],\n",
+       "        [0.5148, 0.4979, 0.4919,  ..., 0.5211, 0.5289, 0.5087],\n",
+       "        [0.5196, 0.5028, 0.4975,  ..., 0.5179, 0.5237, 0.5029],\n",
+       "        ...,\n",
+       "        [0.5391, 0.5454, 0.5390,  ..., 0.5174, 0.5051, 0.5098],\n",
+       "        [0.5689, 0.5684, 0.5567,  ..., 0.4998, 0.4872, 0.4852],\n",
+       "        [0.5510, 0.5550, 0.5425,  ..., 0.5120, 0.4945, 0.4897]])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "torch.roll(x_try,(1,1),(0,1))"
+    "blur_adjoint_torch(rand_1).view(m,m)"
    ]
   },
   {
@@ -1100,14 +1071,14 @@
    "outputs": [
     {
      "ename": "AssertionError",
-     "evalue": "Adjoint test for gradient failed. The normed error is 2.194461",
+     "evalue": "Adjoint test for gradient failed. The normed error is 2.075694",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
       "Cell \u001b[0;32mIn[11], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01moperator_tests\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m test_grad\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# rand_1.grad.zero_()\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[43mtest_grad\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrand_1\u001b[49m\u001b[43m,\u001b[49m\u001b[43mrand_2\u001b[49m\u001b[43m,\u001b[49m\u001b[43mgen_function\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n",
       "File \u001b[0;32m~/Documents/Opt_Research/Summer_2023/operator_tests.py:60\u001b[0m, in \u001b[0;36mtest_grad\u001b[0;34m(x, b, fcn, thresh)\u001b[0m\n\u001b[1;32m     58\u001b[0m error \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mlinalg\u001b[39m.\u001b[39mnorm(grad(x,b,fcn) \u001b[39m-\u001b[39m grad_check(x,b))\n\u001b[1;32m     59\u001b[0m x\u001b[39m.\u001b[39mgrad\u001b[39m.\u001b[39mzero_()\n\u001b[0;32m---> 60\u001b[0m \u001b[39massert\u001b[39;00m error \u001b[39m<\u001b[39m thresh, \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mAdjoint test for gradient failed. The normed error is \u001b[39m\u001b[39m{\u001b[39;00merror\u001b[39m:\u001b[39;00m\u001b[39m.6f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: Adjoint test for gradient failed. The normed error is 2.194461"
+      "\u001b[0;31mAssertionError\u001b[0m: Adjoint test for gradient failed. The normed error is 2.075694"
      ]
     }
    ],
@@ -1119,17 +1090,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([0.0444, 0.0881, 0.0744, 0.0552, 0.0428, 0.0574, 0.0329, 0.0415, 0.0463,\n",
-       "        0.0599])"
+       "tensor([-0.0063, -0.0201, -0.0148, -0.0248,  0.0160,  0.0098,  0.0201, -0.0014,\n",
+       "         0.0126, -0.0076])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1143,24 +1114,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([0.1775, 0.1775, 0.1550, 0.1105, 0.0911, 0.1049, 0.0682, 0.0902, 0.0973,\n",
-       "        0.1242], grad_fn=<SliceBackward0>)"
+       "tensor([ 0.3213,  0.6494,  0.4858,  0.2314,  0.0234, -0.2645, -0.3090, -0.4127,\n",
+       "        -0.3928, -0.2828])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "grad_check(rand_1, rand_2)[:10]"
+    "grad(rand_1, rand_2, gen_function)[32768:32778]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 0.1298,  0.1324,  0.0942,  0.0346, -0.0129, -0.0661, -0.0773, -0.1032,\n",
+       "        -0.0982, -0.0707], grad_fn=<SliceBackward0>)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grad_check(rand_1, rand_2)[32768:32778]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
