--- a/sr3_attempts.ipynb
+++ b/sr3_attempts.ipynb
@@ -1184,18 +1184,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def gen_function(x,b):\n",
-    "    Ax = blur_operator_torch(x)\n",
-    "    w = Ax - b\n",
-    "    return (torch.linalg.norm(w)**2)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
    "outputs": [],
@@ -1281,6 +1269,13 @@
    "source": [
     "from plotting import function_vals_plot\n",
     "function_vals_plot(max_iter,function_values_SR3,\"Function values: SR3\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Section 6 - VPFISTA for image deblurring"
    ]
   },
   {
