Got blur matrix and evals are fast

--- a/sr3_attempts.ipynb
+++ b/sr3_attempts.ipynb
@@ -1231,6 +1231,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.fft\n",
+    "\n",
+    "m = 256\n",
+    "n = 256\n",
+    "\n",
+    "# Seed random number generator (consistent runs)\n",
+    "iseed = 8675309\n",
+    "torch.manual_seed(iseed)\n",
+    "\n",
+    "# Parameters of blurring kernel\n",
+    "blursigma = 4.0  # Controls width of standard deviation (in pixels)\n",
+    "nblur = round(2 * blursigma)  # Gives size of filter (two standard deviations here)\n",
+    "\n",
+    "# Set up Gaussian blurring\n",
+    "inds = torch.arange(-nblur, nblur + 1)\n",
+    "blurmat1 = inds ** 2 + inds.unsqueeze(1) ** 2\n",
+    "blurmat1 = torch.exp(-0.5 * blurmat1 / blursigma ** 2)\n",
+    "bscale = blurmat1.abs().sum()\n",
+    "blurmat1 = blurmat1 / bscale\n",
+    "blurmat = torch.zeros(m, n)\n",
+    "blurmat[0:2 * nblur + 1, 0:2 * nblur + 1] = blurmat1\n",
+    "blurmat = torch.roll(blurmat, shifts=(-nblur, -nblur), dims=(0, 1))\n",
+    "blurhat = torch.fft.fftn(blurmat)\n",
+    "blurhat = torch.real(blurhat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([256])"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.linalg.eigvalsh(blurhat).size()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 86,
    "metadata": {},
    "outputs": [],
